﻿1. Write static method to read from JSON file (static class to perform this function? )
2. 