@@ -8,10 +8,10 @@ namespace CollectibleShopManager
 {
     internal abstract class CollectibleItem
     {
-        public string? Name { get; private set; }
-        public string? Description { get; private set; }
-        public decimal Cost { get; private set; }
-        public decimal SellPrice { get; private set; }
+        public string? Name { get; set; }
+        public string? Description { get; set; }
+        public decimal Cost { get; set; }
+        public decimal SellPrice { get; set; }
 
         public CollectibleItem() { }
         public CollectibleItem(string name, string desc, decimal cost, decimal sellPrice)
