@@ -3,6 +3,5 @@
     internal interface IVideoGame
     {
         string Platform { get; }
-        string Title { get; }
     }
 }
