@@ -1,0 +1,14 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Text.Json;
+using System.Threading.Tasks;
+
+namespace CollectibleShopManager
+{
+    internal class JsonConfiguration
+    {
+        
+    }
+}
