@@ -8,6 +8,10 @@ namespace CollectibleShopManager
     {
         static void Main(string[] args)
         {
+            JsonSerializerOptions jsonSettings = new JsonSerializerOptions();
+            jsonSettings.WriteIndented = true;
+            string homeDirectory = Environment.GetFolderPath(Environment.SpecialFolder.UserProfile);
+            
             while (true)
             {
                 Console.Clear();
@@ -24,12 +28,12 @@ namespace CollectibleShopManager
                     Console.Clear();
                     Console.WriteLine("Selection: Video Games");
                     Console.Write("Press 1 to add a new game, 2 to view a single game, or 3 to view all games\n");
-                    string gameChoice = Console.ReadLine();
+                    string videoGameScreenChoice = Console.ReadLine();
 
                     /// <summary>
                     /// Add a new game
                     /// </summary>
-                    if (gameChoice == "1")
+                    if (videoGameScreenChoice == "1")
                     {
                         Console.Write("Add a title for the game or press Enter to skip\n");
                         string gameTitle = Console.ReadLine();
@@ -60,41 +64,30 @@ namespace CollectibleShopManager
                             gamePriceAsDecimal = 0;
                         }
 
+                        /// <summary>
+                        /// Construct a VideoGame object with all the arguments supplied by the user. First, check to see 
+                        /// if the JSON file exists in the user's home directory. If it does not exist, create it, add
+                        /// the VideoGame object to a new list, then write the list to the JSON file. If the file does 
+                        /// exist, open it, append the new VideoGame object to the list, then save over the previous
+                        /// file. 
+                        /// </summary>
                         VideoGame videoGame = new VideoGame(gameTitle, gamePlatform,
                             gameDesc, gameCostAsDecimal, gamePriceAsDecimal);
 
-                        /// <summary>
-                        /// Write video game data to a JSON file stored in the user's home directory. If 
-                        /// the JSON file does not exist, create it. If the JSON file does exist, append 
-                        /// all new games to the JSON list. 
-                        /// </summary>
-                        
-                        List<VideoGame> gameToAdd = new List<VideoGame>() { videoGame };
-                        JsonSerializerOptions jsonSettings = new JsonSerializerOptions();
-                        jsonSettings.WriteIndented = true; // Format JSON data
-
-                        string homeDirectory = Environment.GetFolderPath(Environment.SpecialFolder.UserProfile);
-
-                        /// Check to see if JSON file already exists
-                        if (File.Exists($"{homeDirectory}\\collectibles.json"))
+                        if (!File.Exists($"{homeDirectory}\\collectibles.json"))
                         {
-                            /// If JSON file exists, open it and read its contents into jsonFileData. Deserialize 
-                            /// the string into a List of VideoGame objects. Append the new video game object to 
-                            /// the List.
-                            string jsonFileData = File.ReadAllText($"{homeDirectory}\\collectibles.json");
-                            List<VideoGame> jsonList = JsonSerializer.Deserialize<List<VideoGame>>(jsonFileData);
-                            jsonList.Add(gameToAdd[0]);
-
-                            /// Serialize the edited jsonList and overwrite the original JSON file.
-                            string serializedList = JsonSerializer.Serialize(jsonList, jsonSettings);
-                            File.WriteAllText($"{homeDirectory}\\collectibles.json", serializedList);
+                            List<VideoGame> gameToAdd = new List<VideoGame>() { videoGame };
+                            string jsonData = JsonSerializer.Serialize<List<VideoGame>>(gameToAdd, jsonSettings);
+                            File.WriteAllText($"{homeDirectory}\\collectibles.json", jsonData);
                         }
                         else 
                         {
-                            /// Create JSON file if it does not already exist, and add the first VideoGame object to it.
-                            /// VideoGame objects are stored in a List to allow additional games to be added.
-                            string jsonData = JsonSerializer.Serialize<List<VideoGame>>(gameToAdd, jsonSettings);
-                            File.WriteAllText($"{homeDirectory}\\collectibles.json", jsonData);
+                            string jsonFileData = File.ReadAllText($"{homeDirectory}\\collectibles.json");
+                            List<VideoGame> jsonList = JsonSerializer.Deserialize<List<VideoGame>>(jsonFileData);
+                            jsonList.Add(videoGame);
+
+                            string serializedList = JsonSerializer.Serialize(jsonList, jsonSettings);
+                            File.WriteAllText($"{homeDirectory}\\collectibles.json", serializedList);
                         }
                         
                     }
@@ -102,7 +95,7 @@ namespace CollectibleShopManager
                     /// <summary>
                     /// View a single game
                     /// </summary>
-                    else if (gameChoice == "2")
+                    else if (videoGameScreenChoice == "2")
                     {
 
                     }
@@ -110,7 +103,7 @@ namespace CollectibleShopManager
                     /// <summary>
                     /// View all existing games
                     /// </summary>
-                    else if (gameChoice == "3")
+                    else if (videoGameScreenChoice == "3")
                     {
 
                     }
